--- a/templates/accounts/password_change.html
+++ b/templates/accounts/password_change.html
@@ -2,8 +2,8 @@
 <link rel="stylesheet"  type="text/css" href="{% static 'css/eventx-forms.css' %}">
 
 <div class="login-box">
-  <h2>Password Change</h2>
-  <form action="{% url 'change password' %}" method="post">
+    <h2>Password Change</h2>
+  <form action="{% url 'change password' user.pk %}" method="post">
     <div class="user-box">
       {{ form.old_password }}
       <label>Old Password</label>
@@ -17,13 +17,13 @@
       <label>New Password Confirm</label>
     </div>
     {% csrf_token %}
-    <a href="{% url 'change password' %}">
+    <a>
       <span></span>
       <span></span>
       <span></span>
       <span></span>
         <p>
-			<input type="submit" value="Login" id="submit">
+			<input type="submit" value="Change Password" id="submit">
 		</p>
     </a>
   </form>
