--- a/templates/accounts/profile_details.html
+++ b/templates/accounts/profile_details.html
@@ -11,6 +11,7 @@
             </div>
             {% if is_owner %}
                 <div class=" d-flex mt-2"> <button class="btn1 btn-dark" onclick="location.href='{% url 'edit profile' profile.pk %}'" type="button">Edit Profile</button> </div>
+                <div class=" d-flex mt-2"> <button class="btn1 btn-dark" onclick="location.href='{% url 'change password' profile.pk %}'" type="button">Change Password</button> </div>
                 <div class=" d-flex mt-2"> <button class="btn1 btn-dark" onclick="location.href='{% url 'log out' %}'" type="button">Log out</button> </div>
             {% endif %}
             <div class="text mt-3"> <span>Date of Birth: {{ profile.date_of_birth }} </span> </div>
