--- a/templates/main/event-details.html
+++ b/templates/main/event-details.html
@@ -41,7 +41,7 @@
                                                 </li>
                                                 <li>
                                                 <div class="main-dark-button"><a
-                                                    href="{% url 'event details' event.pk %}">Tickets</a>
+                                                    href="{{ event.ticket_url }}">Tickets</a>
                                                 </div>
                                                 </li>
                                         </div>
