--- a/templates/main/shows-events.html
+++ b/templates/main/shows-events.html
@@ -12,18 +12,18 @@
     <div class="col-lg-12">
     <div class="heading-tabs">
     <div class="row">
-    <div class="col-lg-8">
+    {% comment %}<div class="col-lg-8">
         <ul>
             <li><a href='#tabs-1'>Upcoming</a></li>
             <li><a href='#tabs-2'>Past(SOON)</a></li>
         </ul>
-    </div>
+    </div>{% endcomment %}
     <div class="col-lg-12">
     <section class='tabs-content'>
     <article id='tabs-1'>
         <div class="row">
             <div class="col-lg-12">
-                <div class="heading"><h2>Upcoming</h2></div>
+                <div class="heading"><h2>Events</h2></div>
             </div>
             <div class="col-lg-9">
                 <div class="row">
@@ -34,7 +34,7 @@
                                     <div class="col-lg-4">
                                         <div class="left-content">
                                             <h4>{{ event.title }}</h4>
-                                            <span style=" display:inline-block;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;max-width: 13ch;">{{ event.description }}</span>
+                                            <span style=" display:inline-block;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;max-width: 25ch;">{{ event.description }}</span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4">
