--- a/templates/main/moment-details.html
+++ b/templates/main/moment-details.html
@@ -1,56 +1,43 @@
 {% extends 'base.html' %}
+
+
 {% block page_content %}
     <!-- ***** About Us Page ***** -->
-    <div class="page-heading-rent-venue">
+    <div class="page-heading-shows-events">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <h2>{{ momentphoto.title }}</h2>
-                    <span>SHARED MOMENT</span>
+                    <span>{{ momentphoto.user }}</span>
                 </div>
             </div>
         </div>
     </div>
 
-                        <div class="col-lg-12">
-                            <div class="event-item">
-                                <div class="row">
-                                    <div class="col-lg-4">
-                                        <div class="left-content">
-                                            <div class="thumb">
-                                            <img src="{{ momentphoto.photo.url }}" alt="event image">
-                                            </div>
-                                    </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-lg-12">
-                                            <h2>EXPERIENCE DESCRIPTION</h2>
-                                            <p>{{ momentphoto.description }}</p>
-                                        </div>
-                                    <div class="col-lg-4">
-                                        <div class="right-content">
-                                            <li>
-                                                <li>
-                                                    <i class="fa fa-clock-o"></i>
-                                                    <h6>{{ momentphoto.event.date_of_event }}<br>
-                                                    </h6>
-                                                </li>
-                                                <li>
-                                                    <i class="fa fa-map-marker"></i>
-                                                    <span>{{ momentphoto.event.title }} - {{ momentphoto.event.location }}</span>
-                                                </li>
-                                                <li>
-                                                {% if is_owner %}
-                                                    <div class="main-dark-button"><a
-                                                        href="{% url 'delete moment' momentphoto.pk %}">Delete</a>
-                                                    </div>
-                                                {% endif %}
-                                                </li>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+    <div class="ticket-details-page">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="left-image">
+                        <img src="{{ momentphoto.photo.url }}" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="right-content">
+                        <h4>{{ momentphoto.title }}</h4>
+                        <ul>
+                            <li><i class="fa fa-clock-o"></i> {{ momentphoto.event.date_of_event }}</li>
+                            <li><i class="fa fa-map-marker"></i>{{ momentphoto.event.location }}</li>
+                        </ul>
+                        <div class="warn">
+                            <p>{{ momentphoto.description }}</p>
                         </div>
-                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 {% endblock %}
