--- a/templates/main/event-details.html
+++ b/templates/main/event-details.html
@@ -1,54 +1,50 @@
 {% extends 'base.html' %}
+    <!-- ***** Header Area End ***** -->
+
 {% block page_content %}
     <!-- ***** About Us Page ***** -->
-    <div class="page-heading-rent-venue">
+    <div class="page-heading-shows-events">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <h2>{{ event.title }}</h2>
-                    <span>DETAILS</span>
+                    <span>Check out the event and grab your ticket right now.</span>
                 </div>
             </div>
         </div>
     </div>
 
-                        <div class="col-lg-12">
-                            <div class="event-item">
-                                <div class="row">
-                                    <div class="col-lg-4">
-                                        <div class="left-content">
-                                            <div class="thumb">
-                                            <img src="{{ event.picture.url }}" alt="event image">
-                                            </div>
-                                    </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-lg-12">
-                                            <h2>DESCRIPTION</h2>
-                                            <p>{{ event.description }}</p>
-                                        </div>
-                                    <div class="col-lg-4">
-                                        <div class="right-content">
-                                            <li>
-                                                <li>
-                                                    <i class="fa fa-clock-o"></i>
-                                                    <h6>{{ event.date_of_event }}<br>
-                                                    </h6>
-                                                </li>
-                                                <li>
-                                                    <i class="fa fa-map-marker"></i>
-                                                    <span>{{ event.location }}</span>
-                                                </li>
-                                                <li>
-                                                <div class="main-dark-button"><a
-                                                    href="{{ event.ticket_url }}">Tickets</a>
-                                                </div>
-                                                </li>
-                                        </div>
-                                    </div>
-                                </div>
+    <div class="ticket-details-page">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="left-image">
+                        <img src="{{ event.picture.url }}" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="right-content">
+                        <h4>{{ event.title }}</h4>
+                        <ul>
+                            <li><i class="fa fa-clock-o"></i> {{ event.date_of_event }}</li>
+                            <li><i class="fa fa-map-marker"></i>{{ event.location }}</li>
+                        </ul>
+                        <div class="quantity-content">
+                            <div class="right-content">
+                                <div class="total">
+                            <div class="main-dark-button"><a href="{{ event.ticket_url }}">Purchase Tickets</a></div>
+                        </div>
                             </div>
                         </div>
+                        <div class="warn">
+                            <p>{{ event.description }}</p>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 {% endblock %}
