--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -52,7 +52,7 @@
                                 <a href="{% url 'about page' %}"><img src="{{ venue.photo.url }}" alt="event picture"></a>
                             </div>
                             <div class="down-content">
-                                <a href="event-details.html"><h4>{{ venue.name }}</h4></a>
+                                <a href=""><h4>{{ venue.name }}</h4></a>
                                 <ul>
                                     <li><i class="fa fa-map-marker"></i> {{ venue.location }}</li>
                                 </ul>
