Fixing minor bugs
- Fixing forms bugs
- Fixing template bugs

--- a/templates/accounts/profile_create.html
+++ b/templates/accounts/profile_create.html
@@ -51,7 +51,7 @@
       <span></span>
       <span></span>
         <p>
-            <input type="submit" value="Create My Account" id="submit">
+            <input class="form-btn" type="submit" value="Create My Account" id="submit">
         </p>
             </a>
     </form>
