--- a/templates/accounts/profile_login.html
+++ b/templates/accounts/profile_login.html
@@ -19,7 +19,7 @@
       <span></span>
       <span></span>
         <p>
-			<input type="submit" value="Login" id="submit">
+			<input class="form-btn" type="submit" value="Login" id="submit">
 		</p>
     </a>
   </form>
