--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -40,7 +40,7 @@
         <div class="coming-events">
         <div class="left-button">
             <div class="main-white-button">
-                <a href="{% url 'about page' %}">Contact Us!</a>
+                <a href="{% url 'contact us' %}">Contact Us!</a>
             </div>
         </div>
         <div class="container">
