--- a/staticfiles/css/eventx-design.css
+++ b/staticfiles/css/eventx-design.css
@@ -178,6 +178,10 @@ body {
   color: #fff;
 }
 
+.main-white-button {
+  margin-bottom: 1rem;
+}
+
 .main-white-button a {
   display: inline-block;
   font-size: 14px;
@@ -907,12 +911,14 @@ Coming Events
 
 .event-item .thumb img {
   width: 100%;
+  height: 180px;
   overflow: hidden;
 }
 
 .event-item .down-content {
   background-color: #fff;
   padding: 30px;
+  height: 200px;
 }
 
 .event-item .down-content h4 {
