--- a/templates/main/shows-events.html
+++ b/templates/main/shows-events.html
@@ -5,78 +5,82 @@
 
 
     <div class="shows-events-tabs">
-    <div class="container">
-    <div class="row">
-    <div class="col-lg-12">
-    <div class="row" id="tabs">
-    <div class="col-lg-12">
-    <div class="heading-tabs">
-    <div class="row">
-    {% comment %}<div class="col-lg-8">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="row" id="tabs">
+                        <div class="col-lg-12">
+                            <div class="heading-tabs">
+                                <div class="row">
+                                    {% comment %}<div class="col-lg-8">
         <ul>
             <li><a href='#tabs-1'>Upcoming</a></li>
             <li><a href='#tabs-2'>Past(SOON)</a></li>
         </ul>
     </div>{% endcomment %}
-    <div class="col-lg-12">
-    <section class='tabs-content'>
-    <article id='tabs-1'>
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="heading"><h2>Events</h2></div>
-            </div>
-            <div class="col-lg-9">
-                <div class="row">
-                    {% for event in event_list %}
-                        <div class="col-lg-12">
-                            <div class="event-item">
-                                <div class="row">
-                                    <div class="col-lg-4">
-                                        <div class="left-content">
-                                            <h4>{{ event.title }}</h4>
-                                            <span style=" display:inline-block;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;max-width: 25ch;">{{ event.description }}</span>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-4">
-                                        <div class="thumb">
-                                            <img src="{{ event.picture.url }}" alt="event image">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-4">
-                                        <div class="right-content">
-                                            <ul>
-                                                <li>
-                                                    <i class="fa fa-clock-o"></i>
-                                                    <h6>{{ event.date_of_event }}<br>
-                                                    </h6>
-                                                </li>
-                                                <li>
-                                                    <i class="fa fa-map-marker"></i>
-                                                    <span>{{ event.location }}</span>
-                                                </li>
-                                                <li>
-                                                    <button onclick="location.href='{% url 'event details' event.pk %}'" type="button">Event Details</button>
-                                                </li>
-                                            </ul>
-                                        </div>
+                                    <div class="col-lg-12">
+                                        <section class='tabs-content'>
+                                            <article id='tabs-1'>
+                                                <div class="row">
+                                                    <div class="col-lg-12">
+                                                        <div class="heading"><h2>Events</h2></div>
+                                                    </div>
+                                                    <div class="col-lg-9">
+                                                        <div class="row">
+                                                            {% for event in event_list %}
+                                                                <div class="col-lg-12">
+                                                                    <div class="event-item">
+                                                                        <div class="row">
+                                                                            <div class="col-lg-4">
+                                                                                <div class="left-content">
+                                                                                    <h4>{{ event.title }}</h4>
+                                                                                    <span style=" display:inline-block;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;max-width: 25ch;">{{ event.description }}</span>
+                                                                                </div>
+                                                                            </div>
+                                                                            <div class="col-lg-4">
+                                                                                <div class="thumb">
+                                                                                    <img src="{{ event.picture.url }}"
+                                                                                         alt="event image">
+                                                                                </div>
+                                                                            </div>
+                                                                            <div class="col-lg-4">
+                                                                                <div class="right-content">
+                                                                                    <ul>
+                                                                                        <li>
+                                                                                            <i class="fa fa-clock-o"></i>
+                                                                                            <h6>{{ event.date_of_event }}<br>
+                                                                                            </h6>
+                                                                                        </li>
+                                                                                        <li>
+                                                                                            <i class="fa fa-map-marker"></i>
+                                                                                            <span>{{ event.location }}</span>
+                                                                                        </li>
+                                                                                        <li>
+                                                                                            <button onclick="location.href='{% url 'event details' event.pk %}'"
+                                                                                                    type="button">Event
+                                                                                                Details
+                                                                                            </button>
+                                                                                        </li>
+                                                                                    </ul>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            {% endfor %}
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </article>
+                                        </section>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    {% endfor %}
+                    </div>
                 </div>
-            </div>
-        </div>
-    </article>
-    </section>
-    </div>
-    </div>
-    </div>
-    </div>
-    </div>
-    </div>
-                    <div class="col-lg-12">
-                        <div class="pagination">
+                <div class="col-lg-12">
+                    <div class="pagination">
                             <span class="step-links">
         {% if page_obj.has_previous %}
             <a href="?page=1">&laquo; FIRST</a>
@@ -93,9 +97,9 @@
                                     <a href="?page={{ page_obj.paginator.num_pages }}">LAST &raquo;</a>
                                 {% endif %}
     </span>
-                        </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 {% endblock %}
