--- a/templates/accounts/profile_edit.html
+++ b/templates/accounts/profile_edit.html
@@ -5,16 +5,6 @@
     <h2>Edit Profile</h2>
     <form action="{% url 'edit profile' profile.pk %}" method="post" enctype="multipart/form-data">
         <div class="user-box">
-            {{ form.first_name }}
-            <label>First Name</label>
-        </div>
-
-        <div class="user-box">
-            {{ form.last_name }}
-            <label>Last Name</label>
-        </div>
-
-        <div class="user-box">
             <h7 style="color: white;">Picture</h7>
             {{ form.picture }}
 
@@ -32,7 +22,7 @@
       <span></span>
       <span></span>
         <p>
-            <input type="submit" value="Edit My Account" id="submit">
+            <input class="form-btn" type="submit" value="Edit My Account" id="submit">
         </p>
             </a>
     </form>
