Fixing bugs and README

--- a/templates/accounts/profile_create.html
+++ b/templates/accounts/profile_create.html
@@ -41,7 +41,7 @@
 
         <div class="user-box">
             {{ form.date_of_birth }}
-            <label>Date of Birth</label>
+            <label>Date of Birth (Month/Day/Year)</label>
         </div>
 
         {% csrf_token %}
